# living-context-engine

./: .env.example  .gitignore  .gitleaks.toml  CRUSH_TEST_PROMPT.md  ENVIRONMENT.md  FINALIZATION_REPORT.md  GAPS.md  PRODUCT_DIRECTION.md  README.md  RELEASE_GATES.md  RELEASE_REPORT.md  SHIP_VERIFICATION.txt  STATUS.md  TRACECRUMB_SESSION_EXECUTION.yaml  VALIDATION_REPORT.md  WEDGE_SPEC.md  index.html  living-context-engine.yaml  main.py  nitro.config.ts  package-lock.json  package.json  pyproject.toml  requirements-optional.txt  requirements.txt  schema.sql  wrangler.jsonc
docs/: API.md  COMPILER_APPLICATION.md  DECISIONS.md
docs/gaps/: ACCEPTANCE_TESTS.yaml  DRIFTGUARD_GAP_CLOSURE_REPORT.md  EXECUTION_BOARD.yaml  GAP_REGISTRY.yaml  READINESS_VERDICT.yaml  (+1 more)
documentation/: DOCUMENT_REGISTRY.yaml  UPDATE_RULES.yaml
intelligence/: EVENT_SCHEMA.json  METRICS.yaml
lce/: main.py  retrieval.py
scripts/: check-deploy-env.mjs  check-edge.mjs  deno-check.mjs  env-check.mjs  judgment-contract.test.mjs  release-check.mjs  ship-tests.mjs  sync-schema.mjs  worker-smoke.mjs
src/: App.jsx  branchConfig.js  styles.css
supabase/: config.toml  schema.sql
tests/: conftest.py  test_cli_exit_semantics.py  test_compile_contract.py  test_dependency_closure.py  test_end_to_end_continuity.py  test_import_safety.py  test_log_resync_recovery.py  test_parser_failure_isolation.py  test_partial_sync_scope.py  test_provenance.py  test_rejected_outcome_not_promoted.py  test_retrieval_contract.py  test_signal_taxonomy.py  test_stale_context_warning.py  test_sync_idempotency.py
(+49 files in other folders)
