[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "living-context-engine"
version = "1.0.0"
description = "Local-first context-recovery and continuity CLI."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lce = "lce.main:main"

[tool.setuptools.packages.find]
include = ["lce*"]
